--- a/assets/stylesheets/common/base/header.scss
+++ b/assets/stylesheets/common/base/header.scss
@@ -118,3 +118,33 @@ header .header-links-wrapper .header-link.big {
     margin-right: 10px;
     margin-left: 10px;
 }
+header .header-links-wrapper .header-link.with-child .header-links-wrapper {
+    width: 8em;
+    display: none;
+    position: absolute;
+    background: #1C1C1C;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+    left: -2em;
+    top: 3em;
+}
+header .header-links-wrapper .header-link.with-child:hover .header-links-wrapper {
+    display: block;
+}
+header .header-links-wrapper .header-link.with-child .header-links-wrapper .header-sublink {
+    padding: 14px;
+    font-size: 12px;
+    color: #ccc;
+    border-bottom: 1px solid #000;
+    display: block;
+}
+header .header-links-wrapper .header-link.with-child .header-links-wrapper .header-sublink.active {
+    color: #293feb;
+}
+.menu-panel ul.menu-links li a.osmc-link-pink {
+    color: #fff;
+    background-color: #ff1654 !important;
+}
+.menu-panel ul.menu-links li a.osmc-link-blue {
+    color: #fff;
+    background-color: #293feb !important;
+}
