Override theme's css

--- a/assets/stylesheets/desktop/header.scss
+++ b/assets/stylesheets/desktop/header.scss
@@ -9,8 +9,8 @@
 		position: static !important;
 	}
 	.d-header .contents {
-		display: block;
-		margin: 8px 0;
+		display: block !important;
+		margin: 8px 0 !important;
 	}
 	.extra-info-wrapper {
 	    overflow: visible;
