Check login first on My OSMC links
Signed-off-by: Sam Nazarko <email@samnazarko.co.uk>

--- a/assets/javascripts/discourse/templates/preferences/account.hbs
+++ b/assets/javascripts/discourse/templates/preferences/account.hbs
@@ -123,7 +123,7 @@
 
 <div>
   <h2>Your Account</h2>
-  <p>To manage your My OSMC account further, click <a href="http://myosmc.com">here</a>.</p>
+  <p>To manage your My OSMC account further, click <a href="https://my.osmc.tv/login/?redirect_to=https://my.osmc.tv/my-account/">here</a>.</p>
 </div>
 
 {{#if canSaveUser}}
