Updated account page to latest version

--- a/assets/javascripts/discourse/templates/preferences/account.hbs
+++ b/assets/javascripts/discourse/templates/preferences/account.hbs
@@ -1,233 +1,343 @@
-<div class="control-group pref-username">
-  <label class="control-label">{{i18n 'user.username.title'}}</label>
-  <div class="controls">
-    <span class='static'>{{model.username}}</span>
-    {{#if model.can_edit_username}}
-      {{#link-to "preferences.username" class="btn btn-default btn-small btn-icon pad-left no-text"}}
-      {{d-icon "pencil-alt"}} {{/link-to}}
-    {{/if}}
-  </div>
-  {{#if siteSettings.enable_mentions}}
-    <div class='instructions'>
-      {{{i18n 'user.username.short_instructions' username=model.username}}}
-    </div>
-  {{/if}}
+<div class="control-group pref-username" data-setting-name="user-username">
+  <label class="control-label">{{i18n "user.username.title"}}</label>
+  <UsernamePreference @user={{this.model}} />
 </div>
 
-{{#unless siteSettings.sso_overrides_avatar}}
-  <div class="control-group pref-avatar">
-    <label class="control-label" id="profile-picture">{{i18n 'user.avatar.title'}}</label>
+{{#unless this.siteSettings.discourse_connect_overrides_avatar}}
+  <div class="control-group pref-avatar" data-setting-name="user-avatar">
+    <label class="control-label" id="profile-picture">{{i18n
+        "user.avatar.title"
+      }}</label>
+    <input
+      type="hidden"
+      id="user-avatar-uploads"
+      data-custom-avatar-upload-id={{this.model.custom_avatar_upload_id}}
+      data-system-avatar-upload-id={{this.model.system_avatar_upload_id}}
+    />
     <div class="controls">
       {{! we want the "huge" version even though we're downsizing it in CSS }}
-      {{bound-avatar model "huge"}}
-      {{d-button action=(route-action "showAvatarSelector") actionParam=model class="btn-default pad-left" icon="pencil-alt"}}
+      {{bound-avatar this.model "huge"}}
+      <DButton
+        @action={{fn (route-action "showAvatarSelector") this.model}}
+        @icon="pencil-alt"
+        id="edit-avatar"
+        class="btn-default pad-left"
+      />
     </div>
   </div>
 {{/unless}}
 
-{{#if canEditName}}
-  <div class="control-group pref-name">
-    <label class="control-label">{{i18n 'user.name.title'}}</label>
-    <div class="controls">
-      {{#if model.can_edit_name}}
-        {{text-field value=newNameInput classNames="input-xxlarge"}}
-      {{else}}
-        <span class='static'>{{model.name}}</span>
-      {{/if}}
-    </div>
-    <div class='instructions'>
-      {{nameInstructions}}
-    </div>
-  </div>
-{{/if}}
+{{#if this.canCheckEmails}}
+  <div class="control-group pref-email" data-setting-name="user-email">
+    <label class="control-label">{{i18n "user.email.title"}}</label>
+    {{#if this.model.email}}
+      {{#if this.siteSettings.enable_secondary_emails}}
+        <div class="emails">
+          {{#each this.emails as |email|}}
+            <div class="row email">
+              {{#if this.model.can_edit_email}}
+                <EmailDropdown
+                  @email={{email}}
+                  @setPrimaryEmail={{action "setPrimaryEmail"}}
+                  @destroyEmail={{action "destroyEmail"}}
+                />
+              {{/if}}
 
-{{#if canCheckEmails}}
-  <div class="control-group pref-email">
-    <label class="control-label">{{i18n 'user.email.title'}}</label>
-    {{#if model.email}}
-      <div class="controls">
-        <span class='static'>{{model.email}}</span>
-        {{#if model.can_edit_email}}
-          {{#link-to "preferences.email" class="btn btn-default btn-small btn-icon pad-left no-text"}}{{d-icon "pencil-alt"}}{{/link-to}}
+              <div class="email-first">{{email.email}}</div>
+
+              <div class="email-second">
+                {{#if email.primary}}
+                  <span class="primary">{{i18n
+                      "user.email.primary_label"
+                    }}</span>
+                {{/if}}
+
+                {{#unless email.confirmed}}
+                  <span class="unconfirmed">{{i18n
+                      "user.email.unconfirmed_label"
+                    }}</span>
+                  &bull;
+                  {{#if email.resending}}
+                    <span>{{i18n "user.email.resending_label"}}</span>
+                  {{else if email.resent}}
+                    <span>{{i18n "user.email.resent_label"}}</span>
+                  {{else}}
+                    <a
+                      {{on "click" (fn this.resendConfirmationEmail email)}}
+                      href
+                    >{{i18n "user.email.resend_label"}}</a>
+                  {{/if}}
+                {{/unless}}
+              </div>
+            </div>
+          {{/each}}
+        </div>
+
+        {{#if this.canAddEmail}}
+          <LinkTo
+            @route="preferences.email"
+            @query={{hash new=1}}
+            class="pull-right"
+          >
+            {{d-icon "plus"}}
+            {{i18n "user.email.add_email"}}
+          </LinkTo>
         {{/if}}
-      </div>
-      <div class='instructions'>
-        {{#if siteSettings.sso_overrides_email}}
-          {{i18n 'user.email.sso_override_instructions'}}
+      {{else}}
+        <div class="controls">
+          <span class="static">{{this.model.email}}</span>
+          {{#if this.model.can_edit_email}}
+            <LinkTo
+              @route="preferences.email"
+              class="btn btn-default btn-small btn-icon pad-left no-text"
+            >{{d-icon "pencil-alt"}}</LinkTo>
+          {{/if}}
+        </div>
+      {{/if}}
+
+      <div class="instructions">
+        {{#if this.siteSettings.auth_overrides_email}}
+          {{i18n "user.email.auth_override_instructions"}}
         {{/if}}
-        {{i18n 'user.email.instructions'}}
+        {{i18n "user.email.instructions"}}
       </div>
     {{else}}
       <div class="controls">
-        {{d-button action=(route-action "checkEmail") class="btn-default" actionParam=model title="admin.users.check_email.title" icon="far-envelope" label="admin.users.check_email.text"}}
+        <DButton
+          @action={{fn (route-action "checkEmail") this.model}}
+          @title="admin.users.check_email.title"
+          @icon="envelope"
+          @label="admin.users.check_email.text"
+          class="btn-default"
+        />
       </div>
     {{/if}}
   </div>
 {{/if}}
 
-{{#if canChangePassword}}
-<div class="control-group pref-password">
-  <label class="control-label">{{i18n 'user.password.title'}}</label>
-  <div class="controls">
-    <a href {{action "changePassword"}} class='btn btn-default'>
-      {{d-icon "envelope"}}
-      {{#if model.no_password}}
-        {{i18n 'user.change_password.set_password'}}
-      {{else}}
-        {{i18n 'user.change_password.action'}}
-      {{/if}}
-    </a>
-
-    {{passwordProgress}}
-  </div>
-</div>
-
-<div class="control-group pref-second-factor">
-  <label class="control-label">{{i18n 'user.second_factor.title'}}</label>
-  {{#unless model.second_factor_enabled}}
-    <label>
-        {{i18n 'user.second_factor.short_description'}}
-    </label>
-  {{/unless}}
-  <div class="controls pref-second-factor">
-    {{#if isCurrentUser}}
-      {{#link-to "preferences.second-factor" class="btn btn-default"}}
-        {{d-icon "lock"}} <span>{{i18n 'user.second_factor.enable'}}</span>
-      {{/link-to}}
-    {{/if}}
-  </div>
-</div>
-{{/if}}
-
-{{#if canUpdateAssociatedAccounts}}
-  <div class="control-group pref-associated-accounts">
-    <label class="control-label">{{i18n 'user.associated_accounts.title'}}</label>
-    {{#if associatedAccountsLoaded}}
+{{#if this.canUpdateAssociatedAccounts}}
+  <div
+    class="control-group pref-associated-accounts"
+    data-setting-name="user-associated-accounts"
+  >
+    <label class="control-label">{{i18n
+        "user.associated_accounts.title"
+      }}</label>
+    {{#if this.associatedAccountsLoaded}}
       <table>
-        {{#each authProviders as |authProvider|}}
-          {{#if authProvider.account}}
-            <tr class="{{dasherize authProvider.method.name}} account-connected">
-              <td>{{authProvider.method.prettyName}}</td>
+        <tbody>
+          {{#each this.authProviders as |authProvider|}}
+            {{#if authProvider.account}}
+              <tr
+                class="{{dasherize authProvider.method.name}} account-connected"
+              >
+                <td>{{authProvider.method.prettyName}}</td>
                 <td>{{authProvider.account.description}}</td>
                 <td>
                   {{#if authProvider.method.can_revoke}}
-                    {{d-button action=(action "revokeAccount") actionParam=authProvider.account title="user.associated_accounts.revoke" class="btn-danger no-text" icon="trash-alt" disabled=(get revoking authProvider.method.name) }}
+                    <DButton
+                      @action={{fn
+                        (action "revokeAccount")
+                        authProvider.account
+                      }}
+                      @title="user.associated_accounts.revoke"
+                      @icon="trash-alt"
+                      @disabled={{get this.revoking authProvider.method.name}}
+                      class="btn-danger no-text"
+                    />
                   {{/if}}
                 </td>
-            </tr>
-          {{else}}
-            <tr class="{{dasherize authProvider.method.name}}">
-              <td>{{authProvider.method.prettyName}}</td>
-                <td colspan=2>
+              </tr>
+            {{else}}
+              <tr class={{dasherize authProvider.method.name}}>
+                <td>{{authProvider.method.prettyName}}</td>
+                <td colspan="2">
                   {{#if authProvider.method.can_connect}}
-                    {{d-button action=(action "connectAccount") actionParam=authProvider.method label="user.associated_accounts.connect" class="btn-default" icon="plug" disabled=disableConnectButtons}}
+                    <DButton
+                      @action={{fn
+                        (action "connectAccount")
+                        authProvider.method
+                      }}
+                      @label="user.associated_accounts.connect"
+                      @icon="plug"
+                      @disabled={{this.disableConnectButtons}}
+                      class="btn-default"
+                    />
                   {{else}}
-                    {{i18n 'user.associated_accounts.not_connected'}}
+                    {{i18n "user.associated_accounts.not_connected"}}
                   {{/if}}
                 </td>
-            </tr>
-          {{/if}}
-        {{/each}}
+              </tr>
+            {{/if}}
+          {{/each}}
+        </tbody>
       </table>
     {{else}}
       <div class="controls">
-        {{d-button action=(route-action "checkEmail") actionParam=model title="admin.users.check_email.title" icon="far-envelope" label="admin.users.check_email.text"}}
+        <DButton
+          @action={{fn (route-action "checkEmail") this.model}}
+          @title="admin.users.check_email.title"
+          @icon="envelope"
+          @label="admin.users.check_email.text"
+        />
       </div>
     {{/if}}
   </div>
 {{/if}}
 
-{{#if canSelectTitle}}
-  <div class="control-group pref-title">
-    <label class="control-label">{{i18n 'user.title.title'}}</label>
+{{#if this.canEditName}}
+  <div class="control-group pref-name" data-setting-name="user-name">
+    <label class="control-label">{{i18n "user.name.title"}}</label>
     <div class="controls">
-      {{combo-box
-        value=newTitleInput
-        content=model.availableTitles
-        none="user.title.none"}}
+      {{#if this.model.can_edit_name}}
+        <TextField
+          @value={{this.newNameInput}}
+          @classNames="input-xxlarge"
+          @maxlength="255"
+        />
+      {{else}}
+        <span class="static">{{this.model.name}}</span>
+      {{/if}}
+    </div>
+    <div class="instructions">
+      {{this.nameInstructions}}
     </div>
   </div>
 {{/if}}
 
-{{#if canSelectPrimaryGroup}}
-  <div class="control-group pref-primary-group">
-    <label class="control-label">{{i18n 'user.primary_group.title'}}</label>
+{{#if this.canSelectTitle}}
+  <div class="control-group pref-title" data-setting-name="user-title">
+    <label class="control-label">{{i18n "user.title.title"}}</label>
     <div class="controls">
-      {{combo-box
-        value=newPrimaryGroupInput
-        content=model.filteredGroups
-        none="user.primary_group.none"}}
+      <ComboBox
+        @value={{this.newTitleInput}}
+        @content={{this.model.availableTitles}}
+        @onChange={{action (mut this.newTitleInput)}}
+        @options={{hash none="user.title.none"}}
+      />
+    </div>
+    <div class="instructions">
+      {{i18n "user.title.instructions"}}
     </div>
   </div>
 {{/if}}
 
-
-{{#if canCheckEmails}}
-  <div class="control-group pref-auth-tokens">
-    <label class="control-label">{{i18n 'user.auth_tokens.title'}}</label>
-
-    <div class="auth-tokens">
-      {{#each authTokens as |token|}}
-        <div class="row auth-token">
-          <div class="auth-token-icon">{{d-icon token.icon}}</div>
-          {{#unless token.is_active}}
-            {{auth-token-dropdown token=token
-                                  revokeAuthToken=(action "revokeAuthToken")
-                                  showToken=(action "showToken")}}
-          {{/unless}}
-          <div class="auth-token-first">
-            <span class="auth-token-device">{{token.device}}</span> &ndash; <span title="{{i18n "user.auth_tokens.ip"}}: {{token.client_ip}}">{{token.location}}</span>
-          </div>
-          <div class="auth-token-second">
-            {{token.browser}} |
-            {{#if token.is_active}}
-              <span class="active">{{i18n 'user.auth_tokens.active'}}</span>
-            {{else}}
-              {{format-date token.seen_at}}
-            {{/if}}
-          </div>
-        </div>
-      {{/each}}
+{{#if this.canSelectFlair}}
+  <div class="control-group pref-flair" data-setting-name="user-flair">
+    <label class="control-label">{{i18n "user.flair.title"}}</label>
+    <div class="controls">
+      <FlairChooser
+        @value={{this.newFlairGroupId}}
+        @content={{this.model.availableFlairs}}
+        @onChange={{action (mut this.newFlairGroupId)}}
+        @options={{hash none="user.flair.none"}}
+      />
     </div>
-
-    {{#if canShowAllAuthTokens}}
-      <a {{action "toggleShowAllAuthTokens"}}>
-        {{#if showAllAuthTokens}}
-          {{d-icon "caret-up"}} {{i18n 'user.auth_tokens.show_few'}}
-        {{else}}
-          {{d-icon "caret-down"}} {{i18n 'user.auth_tokens.show_all' count=model.user_auth_tokens.length}}
-        {{/if}}
-      </a>
-    {{/if}}
-
-    <a {{action "revokeAuthToken"}} class="pull-right text-danger">{{d-icon "sign-out-alt"}} {{i18n 'user.auth_tokens.log_out_all'}}</a>
+    <div class="instructions">
+      {{i18n "user.flair.instructions"}}
+    </div>
   </div>
 {{/if}}
 
-{{plugin-outlet name="user-preferences-account" args=(hash model=model save=(action "save"))}}
+{{#if this.canSelectUserStatus}}
+  <div class="control-group pref-user-status" data-setting-name="user-status">
+    <label class="control-label">{{i18n "user.status.title"}}</label>
+    <div class="controls">
+      {{#if this.newStatus}}
+        <UserStatusMessage
+          @status={{this.newStatus}}
+          @showDescription={{true}}
+        />
+      {{else}}
+        <span class="static">{{i18n "user.status.not_set"}}</span>
+      {{/if}}
+      <DButton
+        @action={{fn (action "showUserStatusModal") this.newStatus}}
+        @icon="pencil-alt"
+        class="btn-default btn-small pad-left"
+      />
+    </div>
+  </div>
+{{/if}}
 
-<br/>
+{{#if this.canSelectPrimaryGroup}}
+  <div
+    class="control-group pref-primary-group"
+    data-setting-name="user-primary-group"
+  >
+    <label class="control-label">{{i18n "user.primary_group.title"}}</label>
+    <div class="controls">
+      <ComboBox
+        @value={{this.newPrimaryGroupInput}}
+        @content={{this.model.filteredGroups}}
+        @options={{hash none="user.primary_group.none"}}
+      />
+    </div>
+  </div>
+{{/if}}
 
-{{plugin-outlet name="user-custom-controls" args=(hash model=model)}}
+{{#if this.canDownloadPosts}}
+  <div
+    class="control-group pref-data-export"
+    data-setting-name="user-data-export"
+  >
+    <label class="control-label">{{i18n "user.download_archive.title"}}</label>
+    <div class="controls">
+      <DButton
+        @action={{action "exportUserArchive"}}
+        @label="user.download_archive.button_text"
+        @icon="download"
+        class="btn-default btn-request-archive"
+      />
+    </div>
+    <div class="instructions">
+      {{i18n "user.download_archive.description"}}
+    </div>
+  </div>
+{{/if}}
+
+<span>
+  <PluginOutlet
+    @name="user-preferences-account"
+    @connectorTagName="div"
+    @outletArgs={{hash model=this.model save=(action "save")}}
+  />
+</span>
+
+<br />
+
+<span>
+  <PluginOutlet
+    @name="user-custom-controls"
+    @connectorTagName="div"
+    @outletArgs={{hash model=this.model}}
+  />
+</span>
 
 <div>
   <h2>Your Account</h2>
   <p>To manage your My OSMC account further, click <a href="https://my.osmc.tv/login/?redirect_to=https://my.osmc.tv/my-account/">here</a>.</p>
-</div>  
-{{#if canSaveUser}}
-  <div class="control-group save-button">
-    <div class="controls">
-      {{partial 'user/preferences/save-button'}}
-    </div>
-  </div>
+</div>
+
+{{#if this.canSaveUser}}
+  <SaveControls
+    @model={{this.model}}
+    @action={{action "save"}}
+    @saved={{this.saved}}
+  />
 {{/if}}
 
-
-{{#if model.canDeleteAccount}}
+{{#if this.model.canDeleteAccount}}
   <div class="control-group delete-account">
-    <br/>
+    <br />
     <div class="controls">
-      {{d-button action=(action "delete") disabled=deleteDisabled class="btn-danger" icon="far-trash-alt" label="user.delete_account"}}
+      <DButton
+        @action={{action "delete"}}
+        @disabled={{this.deleteDisabled}}
+        @icon="far-trash-alt"
+        @label="user.delete_account"
+        class="btn-danger"
+      />
     </div>
   </div>
 {{/if}}
